Ajuste de Tabela de Disponibilidade SLA com 100%

--- a/templates/_MIOLO_BASE.html
+++ b/templates/_MIOLO_BASE.html
@@ -39,7 +39,7 @@
     <div id="header_content">Relatório de Monitoramento | {{ group_name }}</div>
     <div id="footer_content">Gerado em {{ data_emissao }} | Página <pdf:pagenumber> de <pdf:pagecount></div>
     
-    <h1>Relatório de Monitoramento Customizado</h1>
+    <h1>Relatório de Monitoramento</h1>
     <div class="summary-box">
         <p><strong>Cliente:</strong> {{ group_name }}</p>
         <p><strong>Período:</strong> {{ periodo_referencia }}</p>
